add base styles

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,5 +1,6 @@
 extends layout.pug 
 
 block content 
-    h1 This is a simple note taking application
-    a(href='/create') Create New
+    main.content
+        h1 This is a simple note taking application
+        a.feature(href='/create') Create New
