--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,14 +2,17 @@ doctype html
 html
     head
         title Notes 
+        link(rel='stylesheet' href='/static/main.css')
+        link(rel='preconnect' href='https://fonts.gstatic.com')
+        link(href='https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap' rel='stylesheet')
 
     body
-        header 
+        header.header 
             h1 NOTES 
             
-            nav 
-                a(href='/notes') All notes 
-                a(href='/archive') Archive 
+            nav.nav
+                a.nav-item(href='/notes') All notes 
+                a.nav-item(href='/archive') Archive 
         
         block content 
 
