add create page

--- a/views/home.pug
+++ b/views/home.pug
@@ -3,4 +3,4 @@ extends layout.pug
 block content 
     main.content
         h1 This is a simple note taking application
-        a.feature(href='/create') Create New
+        a.feature(href='/create_note') Create New
