add note detail page

--- a/views/all_notes.pug
+++ b/views/all_notes.pug
@@ -6,6 +6,6 @@ block content
         
         if notes.length
             each note in notes 
-                a.note(href='#')= note 
+                a.note(href='/notes/detail')= note 
         else 
             p There are no any notes yet!
