--- a/views/notes_detail.pug
+++ b/views/notes_detail.pug
@@ -3,6 +3,6 @@ extends layout.pug
 block content 
     main.content 
         h1.page-title Note title 
-        p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, officiis?
+        p.desc Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, officiis?
         
 
